--- a/cpp-publisher/package.xml
+++ b/cpp-publisher/package.xml
@@ -1,3 +1,10 @@
+<!--
+@Author: Nick Steele <nichlock>
+@Date:   15:40 Sep 08 2020
+@Last modified by:   nichlock
+@Last modified time: 19:12 Sep 19 2020
+-->
+
 <?xml version="1.0"?>
 <package format="2">
 	<name>cpp_publisher</name>
